# nexus-analyst-demo-ingest

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  index_pinecone.py  pyproject.toml  upload_to_nexus.py
datasets/acme/: manifest.yaml
eval/: build.md
eval/acme/: retrieval_eval_set.json  retrieval_eval_set_v3.json
sources/acme/: _overview__company.md  dbt__model__account_health.md  dbt__model__arr_snapshot.md  dbt__model__bookings_attribution.md  dbt__model__churn_cohorts.md  dbt__model__dim_customers.md  dbt__model__dim_employees.md  dbt__model__fact_pipeline.md  dbt__model__fact_subscriptions.md  dbt__model__nrr_trailing_12.md  dbt__model__renewal_forecast.md  dbt__model__workflow_runs_daily.md  glossary__active_user.md  glossary__acv.md  glossary__arr.md  glossary__churn_rate.md  glossary__cohort.md  glossary__engaged_customer.md  glossary__gross_margin.md  glossary__logo_churn.md  glossary__ltv.md  glossary__mrr.md  glossary__nrr.md  glossary__paid_customer.md  glossary__pipeline_coverage.md  glossary__quota_attainment.md  glossary__seat_utilization.md  gong__churn-call__cust000287-beacon-studios.md  gong__churn-call__cust000301-product-fit-issue.md  gong__churn__cust000156-budget-cut.md  gong__discovery__cust000412-drag-industries.md  gong__discovery__cust000412-renewal-fy26.md  gong__discovery__cust000509-enterprise-poc.md  gong__discovery__cust000601-mid-market-trial.md  gong__discovery__greenfield-saas.md  gong__discovery__nimbus-finance.md  gong__expansion__cust000089-pro-to-business.md  gong__expansion__cust000156-seat-expansion-postchurn.md  (+88 more)
(+29 files in other folders)
